--- a/Fekrah/API/ClientApp/angular.json
+++ b/Fekrah/API/ClientApp/angular.json
@@ -29,10 +29,12 @@
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
               "src/styles.scss",
-              "node_modules/swiper/swiper-bundle.min.css"
+              "node_modules/swiper/swiper-bundle.min.css",
+              "src/assets/fontAwesome/css/all.min.css"
             ],
             "scripts": [
-              "node_modules/swiper/swiper-bundle.min.js"
+              "node_modules/swiper/swiper-bundle.min.js",
+              "src/assets/fontAwesome/js/all.min.js"
             ]
           },
           "configurations": {
