--- a/Fekrah/API/ClientApp/package.json
+++ b/Fekrah/API/ClientApp/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~13.3.0",
     "bootstrap": "^4.6.0",
     "ngx-owl-carousel-o": "^7.0.5",
+    "ngx-pagination": "^6.0.3",
     "rxjs": "~7.5.0",
     "swiper": "^11.2.6",
     "tslib": "^2.3.0",
