--- a/Fekrah/API/ClientApp/angular.json
+++ b/Fekrah/API/ClientApp/angular.json
@@ -29,9 +29,9 @@
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
               "src/styles.scss",
-              "node_modules/swiper/swiper-bundle.min.css",
-              "src/assets/fontAwesome/css/all.min.css"
+              "node_modules/swiper/swiper-bundle.min.css"
             ],
             "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
