--- a/Fekrah/API/appsettings.json
+++ b/Fekrah/API/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-8LRQCLO\\SQLSERVER2022;Initial Catalog=QetaGhyarDb;Persist Security Info=True;User ID=sa;Password=P@$$w0rd;TrustServerCertificate=True;"
+    //"DefaultConnection": "Data Source=DESKTOP-8LRQCLO\\SQLSERVER2022;Initial Catalog=QetaGhyarDb;Persist Security Info=True;User ID=sa;Password=P@$$w0rd;TrustServerCertificate=True;",
+    "DefaultConnection": "Data Source=DESKTOP-MH02AV0;Initial Catalog=QetaGhyarDb;Persist Security Info=True;User ID=sa;Password=P@$$w0rd;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
