--- a/Fekrah/API/ClientApp/angular.json
+++ b/Fekrah/API/ClientApp/angular.json
@@ -31,8 +31,7 @@
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
               "src/styles.scss",
-              "node_modules/swiper/swiper-bundle.min.css",
-              "node_modules/leaflet/dist/leaflet.css"
+              "node_modules/swiper/swiper-bundle.min.css"
             ],
             "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
