--- a/Fekrah/API/ClientApp/package.json
+++ b/Fekrah/API/ClientApp/package.json
@@ -24,7 +24,8 @@
     "ngx-owl-carousel-o": "^7.0.5",
     "ngx-pagination": "^6.0.3",
     "rxjs": "~7.5.0",
-    "swiper": "^11.2.6",
+    "source-map": "^0.7.4",
+    "swiper": "^11.2.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
@@ -34,6 +35,7 @@
     "@angular/compiler-cli": "~13.3.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "@types/swiper": "^6.0.0",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
