--- a/Fekrah/API/ClientApp/package.json
+++ b/Fekrah/API/ClientApp/package.json
@@ -28,7 +28,7 @@
     "zone.js": "~0.13.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.2.16",
+    "@angular-devkit/build-angular": "^16.2.12",
     "@angular/cli": "^16.2.16",
     "@angular/compiler-cli": "^16.2.12",
     "@types/jasmine": "~3.10.0",
@@ -40,6 +40,6 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "5.1"
+    "typescript": "^5.1.6"
   }
 }
