--- a/Fekrah/API/appsettings.json
+++ b/Fekrah/API/appsettings.json
@@ -1,8 +1,9 @@
 {
-  "ConnectionStrings": {
-    //"DefaultConnection": "Data Source=DESKTOP-8LRQCLO\\SQLSERVER2022;Initial Catalog=QetaGhyarDb;Persist Security Info=True;User ID=sa;Password=P@$$w0rd;TrustServerCertificate=True;",
-    "DefaultConnection": "Data Source=DESKTOP-MH02AV0;Initial Catalog=QetaGhyarDb;Persist Security Info=True;User ID=sa;Password=P@$$w0rd;TrustServerCertificate=True;"
-  },
+    "ConnectionStrings": {
+        //"DefaultConnection": "Data Source=DESKTOP-8LRQCLO\\SQLSERVER2022;Initial Catalog=QetaGhyarDb;Persist Security Info=True;User ID=sa;Password=P@$$w0rd;TrustServerCertificate=True;",
+        //"DefaultConnection": "Data Source=DESKTOP-MH02AV0;Initial Catalog=QetaGhyarDb;Persist Security Info=True;User ID=sa;Password=P@$$w0rd;TrustServerCertificate=True;"
+        "DefaultConnection": "Data Source=DESKTOP-LOK36E7;Initial Catalog=QetaGhyarDb;Persist Security Info=True;User ID=admin;Password=P@$$w0rd;TrustServerCertificate=True;"
+    },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
