--- a/Fekrah/API/ClientApp/package.json
+++ b/Fekrah/API/ClientApp/package.json
@@ -25,6 +25,7 @@
     "rxjs": "~7.8.1",
     "source-map": "^0.7.4",
     "swiper": "^11.2.7",
+    "tom-select": "^2.4.3",
     "tslib": "^2.6.2",
     "xlsx": "^0.18.5",
     "zone.js": "~0.14.3"
