--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,8 @@
 /.vs
 /Fekrah/API/ClientApp/package-lock.json
 /Fekrah/Bussiness/obj/Debug/net8.0/Bussiness.AssemblyInfo.cs
+/Fekrah/Bussiness/obj/Debug/net8.0/Bussiness.AssemblyInfoInputs.cache
+/Fekrah/Bussiness/obj/Debug/net8.0/Bussiness.assets.cache
+/Fekrah/Data/obj/Debug/net8.0/Data.AssemblyInfo.cs
+/Fekrah/Data/obj/Debug/net8.0/Data.AssemblyInfoInputs.cache
+/Fekrah/Data/obj/Debug/net8.0/Data.assets.cache
