--- a/Fekrah/Data/Data.csproj
+++ b/Fekrah/Data/Data.csproj
@@ -12,4 +12,10 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Bussiness">
+      <HintPath>..\Bussiness\bin\Debug\net8.0\Bussiness.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
