--- a/Fekrah/Data/Data.csproj
+++ b/Fekrah/Data/Data.csproj
@@ -8,14 +8,9 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.0" />
+	  <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="Bussiness">
-      <HintPath>..\Bussiness\bin\Debug\net8.0\Bussiness.dll</HintPath>
-    </Reference>
   </ItemGroup>
 
 </Project>
