--- a/Fekrah/API/appsettings.Development.json
+++ b/Fekrah/API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=sqlserver;Database=FokkerahDb;User=sa;Password=YourStrong!Passw0rd"
+    "DefaultConnection": "Server=DESKTOP-MH02AV0;Database=QetaGhyarDb;TrustServerCertificate=True;User=sa;Password=P@$$w0rd;"
   },
   "Logging": {
     "LogLevel": {
