--- a/Fekrah/API/appsettings.json
+++ b/Fekrah/API/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=sqlserver;Database=QetaGhyarDb;User=sa;Password=P@$$w0rd;TrustServerCertificate=True;"
+    //"DefaultConnection": "Server=sqlserver;Database=QetaGhyarDb;User=sa;Password=P@$$w0rd;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=DESKTOP-MH02AV0;Database=QetaGhyarDb;TrustServerCertificate=True;User=sa;Password=P@$$w0rd;"
   },
   "Logging": {
     "LogLevel": {
