--- a/Fekrah/API/appsettings.json
+++ b/Fekrah/API/appsettings.json
@@ -1,6 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=sqlserver;Database=QetaGhyarDb;User=sa;Password=P@$$w0rd;TrustServerCertificate=True;"
+    //"DefaultConnection": "Server=sqlserver;Database=QetaGhyarDb;User=sa;Password=P@$$w0rd;TrustServerCertificate=True;".
+    "DefaultConnection": "Server=DESKTOP-8LIGFN9;Database=QetaGhyarDb;Integrated Security=true; Encrypt=False"
+
   },
   "Logging": {
     "LogLevel": {
