--- a/Fekrah/API/appsettings.Development.json
+++ b/Fekrah/API/appsettings.Development.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
     //"DefaultConnection": "Server=sqlserver;Database=FokkerahDb;User=sa;Password=YourStrong!Passw0rd"
+    //"DefaultConnection": "Server=DESKTOP-8LIGFN9;Database=QetaGhyarDb;Integrated Security=true; Encrypt=False"
     "DefaultConnection": "Server=DESKTOP-8LIGFN9;Database=QetaGhyarDb;Integrated Security=true; Encrypt=False"
   },
   "Logging": {
